[Minor] Code cleanup, and close session on failed auth